<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="mult">x</string>
    <string name="_0">0</string>
    <string name="equals">=</string>
    <string name="div">/</string>
    <string name="c">C</string>
    <string name="result_will_be_displayed_here">Result will be displayed here</string>
    <string name="dot">.</string>
    <string name="back"><![CDATA[<<]]></string>
    <string name="math">MATH</string>
    <string name="scientific">Scientific</string>
    <string name="open">(</string>
    <string name="close">)</string>
    <string name="exp">^</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="sin">sin</string>
    <string name="sinh">sinh</string>
    <string name="cosh">cosh</string>
    <string name="tanh">tanh</string>

</resources>
