<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".Scientific">

    <Button
        android:id="@+id/btnequals2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginEnd="167dp"
        android:background="#8CC3EF"
        android:text="@string/equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btncosh" />

    <TextView
        android:id="@+id/tvResult2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="300dp"
        android:gravity="center_horizontal"
        android:hint="@string/result_will_be_displayed_here"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btntan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="400dp"
        android:background="#998CC3EF"
        android:text="@string/tan"
        app:layout_constraintStart_toEndOf="@+id/btncos"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btncos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="400dp"
        android:background="#998CC3EF"
        android:text="@string/cos"
        app:layout_constraintStart_toEndOf="@+id/btnsin"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnsin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="400dp"
        android:background="#998CC3EF"
        android:text="@string/sin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnsinh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:background="#BF8CC3EF"
        android:text="@string/sinh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsin" />

    <Button
        android:id="@+id/btncosh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:background="#BF8CC3EF"
        android:text="@string/cosh"
        app:layout_constraintStart_toEndOf="@+id/btnsinh"
        app:layout_constraintTop_toBottomOf="@+id/btncos" />

    <Button
        android:id="@+id/btntanh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:background="#BF8CC3EF"
        android:text="@string/tanh"
        app:layout_constraintStart_toEndOf="@+id/btncosh"
        app:layout_constraintTop_toBottomOf="@+id/btntan" />

</androidx.constraintlayout.widget.ConstraintLayout>